// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageWithPlaceholder /> should render 1`] = `
<Memo(ImageWithPlaceholder)
  imageAriaLabel="image-aria-label"
  imageQuality={75}
  imageTitle="image-title"
  imageUrl="https://commons.wikimedia.org/wiki/File:Old_version_of_the_Wikipedia_logo_used_until_2010_(big,_English).png"
  placeholderType="round"
  showLoadingAnimation={true}
>
  <styles__Container>
    <div
      className="styles__Container-sc-1li6v9v-0 HMjkw"
    >
      <ReactPlaceholder
        firstLaunchOnly={true}
        ready={false}
        showLoadingAnimation={true}
        style={
          Object {
            "marginRight": "0",
            "position": "absolute",
          }
        }
        type="round"
      >
        <RoundShape
          className="show-loading-animation"
          color="#CDCDCD"
          rows={3}
          style={
            Object {
              "marginRight": "0",
              "position": "absolute",
            }
          }
        >
          <div
            className="round-shape show-loading-animation"
            style={
              Object {
                "backgroundColor": "#CDCDCD",
                "borderRadius": "500rem",
                "height": "100%",
                "marginRight": "0",
                "position": "absolute",
                "width": "100%",
              }
            }
          />
        </RoundShape>
      </ReactPlaceholder>
      <Image
        aria-label="image-aria-label"
        layout="fill"
        objectFit="cover"
        onLoad={[Function]}
        quality={75}
        src="https://commons.wikimedia.org/wiki/File:Old_version_of_the_Wikipedia_logo_used_until_2010_(big,_English).png"
        title="image-title"
      >
        <div
          style={
            Object {
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "left": 0,
              "margin": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <img
            aria-label="image-aria-label"
            decoding="async"
            onLoad={[Function]}
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": "cover",
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "visibility": "hidden",
                "width": 0,
              }
            }
            title="image-title"
          />
        </div>
      </Image>
    </div>
  </styles__Container>
</Memo(ImageWithPlaceholder)>
`;

exports[`<ImageWithPlaceholder /> should render 2`] = `
<Memo(ImageWithPlaceholder)
  imageUrl="https://commons.wikimedia.org/wiki/File:Old_version_of_the_Wikipedia_logo_used_until_2010_(big,_English).png"
>
  <styles__Container>
    <div
      className="styles__Container-sc-1li6v9v-0 HMjkw"
    >
      <ReactPlaceholder
        firstLaunchOnly={true}
        ready={false}
        showLoadingAnimation={true}
        style={
          Object {
            "marginRight": "0",
            "position": "absolute",
          }
        }
        type="rect"
      >
        <RectShape
          className="show-loading-animation"
          color="#CDCDCD"
          rows={3}
          style={
            Object {
              "marginRight": "0",
              "position": "absolute",
            }
          }
        >
          <div
            className="rect-shape show-loading-animation"
            style={
              Object {
                "backgroundColor": "#CDCDCD",
                "height": "100%",
                "marginRight": "0",
                "position": "absolute",
                "width": "100%",
              }
            }
          />
        </RectShape>
      </ReactPlaceholder>
      <Image
        layout="fill"
        objectFit="cover"
        onLoad={[Function]}
        quality={75}
        src="https://commons.wikimedia.org/wiki/File:Old_version_of_the_Wikipedia_logo_used_until_2010_(big,_English).png"
      >
        <div
          style={
            Object {
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "left": 0,
              "margin": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <img
            decoding="async"
            onLoad={[Function]}
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": "cover",
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "visibility": "hidden",
                "width": 0,
              }
            }
          />
        </div>
      </Image>
    </div>
  </styles__Container>
</Memo(ImageWithPlaceholder)>
`;
